fix: add 404 and 503 error pages and handling to webserver role

--- a/files/nginx/404.html
+++ b/files/nginx/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="description" content="a1 cafe">
+    <meta name="description" content="404">
     <base href="/">
     <title>404</title>
 
